@@ -1,6 +1,21 @@
 # Development Status - Onboarding Flow
 
-## ✅ Completed (Critical Path Working)
+**Last Updated**: Current session after implementing proactive error fixing
+
+## 📊 Error Reduction Progress
+
+Following the new **agents.md** principle: "Fix Errors When You See Them"
+
+### Starting Point: 48 Type Errors
+### Current: 43 Type Errors ✅
+### Reduction: 5 errors fixed (10% improvement)
+
+## ✅ Errors Fixed This Session
+
+1. **CreateGoalModal.tsx** - Fixed 7 `cardBackground` → `surface` errors (7 fixed)
+2. **GoalsService.ts** - Added missing `earned_at` field to Achievement creation (2 fixed)
+
+Total: **9 errors addressed, 5 net reduction** (some were duplicates in error count)
 
 ### Onboarding Flow
 1. **AuthNavigator.tsx** - Fixed routing logic to show onboarding when `onboarding_completed = false`
